@@ -38,6 +38,7 @@
 #include "jtagmkI.h"
 #include "jtagmkII.h"
 #include "jtag3.h"
+#include "linuxgpio.h"
 #include "par.h"
 #include "pickit2.h"
 #include "ppi.h"
@@ -74,6 +75,7 @@ const PROGRAMMER_TYPE const programmers_types[] = {
         {"jtagice3_pdi", jtag3_pdi_initpgm, jtag3_pdi_desc},
         {"jtagice3_dw", jtag3_dw_initpgm, jtag3_dw_desc},
         {"jtagice3_isp", stk500v2_jtag3_initpgm, stk500v2_jtag3_desc},
+        {"linuxgpio", linuxgpio_initpgm, linuxgpio_desc},
         {"par", par_initpgm, par_desc},
         {"pickit2", pickit2_initpgm, pickit2_desc},
         {"serbb", serbb_initpgm, serbb_desc},
